--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="Трак Топ Рецикъл - извозване на отпадъци, машини под наем и строителни дейности">
     <meta name="author" content="">
     <meta name="geo.region" content="BG-23" />
     <meta name="geo.placename" content="София" />
