Adding additional text to about section
Adding additional text to about section

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                     <p class="lead">
                     Фирмата ни <strong>„Трак-Топ - Рецикъл” ЕООД</strong> е с основен предмет на дейност събиране и депониране на строителни, битови и опасни отпадъци, която дейност упражняваме от месец октомври 2006 г. Притежаваме необходимите документи регламентиращи дейността ни според Закона за Управление на Отпадъците. От 2009 г. притежаваме лиценз за извършване на дейности с опасни отпадъци.
                     В предметът на дейност на фирмата се включват унищожаване на архиви, събаряне на сгради и други дейности свързани с управление на отпадъци.
+                    Предлагаме сключване на договори за транспорт на строителни отпадъци до площадка за депониране, рециклиране или преработка, във връзка с реализация на инвестиционни проекти в строителството. Договори, необходими при издаване на разрешително за строеж. Притежаваме Регистрационен документ за дейности с всички групи отпадъци. Разполагаме със сключени договори с депа и площадки за приемане и третиране на отпадъци на територията на София и цялата страна.
                 </p>
                 </div>                
             </div>
